# telegallus

./: .gitignore  README.md  pyproject.toml
telegallus/: alembic.ini  initialization_bot.py  settings.py  start_bot.py  start_bot_web.py
telegallus/bot/handlers/: add_account_tg.py  main_menu.py  management_bot.py  management_chat_radar.py  management_tg_account.py
telegallus/bot/keyboards/: main_menu_kb.py
telegallus/database/: engine.py  schemes.py
telegallus/database/migrations/: env.py
telegallus/database/migrations/versions/: 192fde4c1b7e_add_monitoredchat_user_bot_id.py  1afdedb09062_create_schemas_0_6v.py  42c05850a0c4_create_schemas_0_2v.py  61a78ed314f7_create_schemas_0_3v.py  6ae43e7df425_create_schemas_0_5v.py  9f84708353e3_create_schemas_0_1v.py  a2682c924d47_create_schemas_0_3v.py
telegallus/message_system/: slave_bot_controller.py
